--- a/myReactApp/package.json
+++ b/myReactApp/package.json
@@ -13,11 +13,15 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cordova-android": "^12.0.1"
+    "cordova-android": "^12.0.1",
+    "phonegap-nfc": "^1.2.0"
   },
   "cordova": {
     "platforms": [
       "android"
-    ]
+    ],
+    "plugins": {
+      "phonegap-nfc": {}
+    }
   }
 }
